# Stage_de_Recherche

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  configuration.h  helloworld.c  pogosim-apptainer.def  pogosim-apptainer_pogo-utils.def  pogosim-apptainer_ubuntu22.04.def  pogosim.c  pogosim.cpp  pogosim.h  pogosim_robot.c  pogosim_sim.cpp  render.cpp  render.h  simulator.cpp  simulator.h  spogobot.cpp  spogobot.h
.github/workflows/: ci.yaml
conf/: communication_profile.csv  complex.yaml  phototaxis.yaml  simple.yaml  ssr.yaml  test.yaml  walls_and_membranes.yaml
conf/batch/: gallery_phototaxis.yaml  gallery_simple.yaml  gallery_ssr.yaml  gallery_walls.yaml  simple.yaml  test.yaml
examples/hanabi/: Makefile  main.c
examples/helloworld/: Makefile  main.c
examples/phototaxis/: Makefile  main.c
examples/run_and_tumble/: Makefile  main.c
examples/ssr/: Makefile  colors.c  colors.h  dispersion.c  dispersion.h  limmsswarm.c  limmsswarm.h  util.c  util.h
examples/time_handling/: Makefile  main.c
examples/walls/: main.c
my_new_pogo_prj/: data.py  datas.py  distance.py  main.c  optimizer.py  pogo-utils  pogobot-sdk  pogosim
my_new_pogo_prj/conf/: simple.yaml  test.yaml  test2.yaml
my_new_pogo_prj/env/: pyvenv.cfg
my_new_pogo_prj/examples/hanabi/: hanabi  main.c
my_new_pogo_prj/examples/helloworld/: helloworld  main.c
my_new_pogo_prj/examples/phototaxis/: main.c  phototaxis
my_new_pogo_prj/examples/run_and_tumble/: run_and_tumble
my_new_pogo_prj/examples/ssr/: limmsswarm.h  ssr
my_new_pogo_prj/examples/walls/: main.c
my_new_pogo_prj/frames/: console.txt  data.feather
my_new_pogo_prj/outcmaes/: stoppings.json2
my_new_pogo_prj/results/: result.feather
my_new_pogo_prj/run_and_tumble/: main.c
my_new_pogo_prj/tmp/: combo_tojgf_3f.yaml
my_new_pogo_prj/tmp/sim_0_try1_3_3pgpen/: test.yaml
my_new_pogo_prj/tmp/sim_1_try1_ghbb3uwk/: test.yaml
my_new_pogo_prj/tmp/sim_2_try1_9hff_lwn/: test.yaml
my_new_pogo_prj/tmp/sim_3_try0_wgdmggg3/: test.yaml
my_new_pogo_prj/tmp/sim_4_try0_s8_57p4t/: test.yaml
my_new_pogo_prj/tmp/sim_5_try1_wcj9ev4m/: test.yaml
my_new_pogo_prj/tmp/sim_6_try0_ez_toee5/: test.yaml
my_new_pogo_prj/tmp/sim_7_try0_ku9nydwb/: test.yaml
my_new_pogo_prj/tmp/sim_8_try0_0nx5w667/: test.yaml
my_new_pogo_prj/tmp/sim_9_try1_4rbsnm7_/: test.yaml
scripts/: fit_communication_profile.py  pogobatch.py  pogosim.py
scripts/pogosim/: pogobatch.py
src/: SDL_FontCache.c  configuration.cpp  distances.cpp  distances.h  fpng.cpp  pogobase.h  pogosim.c  pogosim.h  render.cpp  render.h  simulator.cpp  simulator.h  spogobot.cpp  spogobot.h  utils.cpp  utils.h
src/pogosim/: colormaps.c  colormaps.h  configuration.cpp  configuration.h  data_logger.cpp  data_logger.h  distances.cpp  distances.h  fpng.cpp  objects.cpp  objects.h  pogosim.c  pogosim.h  pogosim_sim.cpp  render.cpp  render.h  robot.cpp  robot.h  simulator.cpp  simulator.h  spogobot.cpp  spogobot.h  utils.cpp  utils.h  version.h
template_prj/: Makefile
template_prj/conf/: test.yaml
tests/: requirements.txt  test_box2d.py
tests/cpp2/: swarm_simulator.cpp
